<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string-array name="studentNames">
        <item name="Billy">Billy</item>
        <item name="Jimmy">Jimmy</item>
        <item name="Jason">Jason</item>
        <item name="James">James</item>
        <item name="Johnny">Johnny</item>
        <item name="JimBob">JimBob</item>
        <item name="Spongebob">Spongebob</item>
        <item name="Matt">Matt</item>
        <item name="Liz">Liz</item>
        <item name="Jess">Jess</item>   
        <item name="Cathy">Cathy
            </item>        
    </string-array>
    <string name="app_name">Daedalus</string>
    <string name="selectionText">Select Student</string>
    <string name="mainButtonOne">Let\'s Start Learning!!</string>
    <string name="mainButtonTwo">Quick Check Up Lessons</string>
    <string name="mainButtonThree">Database Access</string>
    <string name="settingsButton1">Query All Simple Frames</string>
    <string name="settingsButton2">Query All Reversed Frames</string>
    <string name="settingsButton3">Query All Double Reversed</string>
    <string name="settingsButton4">Query All Records</string>
    <string name="graphOneFrame">Frame by Frame Graphs</string>
    <string name="graphOneLevels">Levels of Complexity</string>
    <string name="toDoList">BackwardsBlade \n2012</string>
    <string name="FrameSimple">Easier Kinds of\nFrames</string>
    <string name="FrameReversed">Medium Kinds of\nFrames</string>
    <string name="FrameDoubleReversed">Harder Kinds of\nFrames</string>
    <string name="SimpleOneLesson">Easier Frames: \nLesson #1</string>
    <string name="SimpleTwoLesson">Easier Frames: \nLesson #2</string>
    <string name="SimpleThreeLesson">Easier Frames: \nLesson #3</string>
	<string name="SimpleFourLesson">Easier Frames: \nLesson #4</string>
	<string name="SimpleFiveLesson">Easier Frames: \nLesson #5</string>
	<string name="SimpleSixLesson">Easier Frames: \nLesson #6</string>
    <string name="SimpleSevenLesson">Easier Frames: \nLesson #7</string>
	<string name="SimpleEightLesson">Easier Frames: \nLesson #8</string>
	<string name="SimpleNineLesson">Easier Frames: \nLesson #9</string>
	<string name="SimpleTenLesson">Easier Frames: \nLesson #10</string>
	<string name="SimpleElevenLesson">Easier Frames: \nLesson #11</string>
    <string name="SimpleTwelveLesson">Easier Frames: \nLesson #12</string>
	<string name="SimpleThirteenLesson">Easier Frames: \nLesson #13</string>
	<string name="SimpleFourteenLesson">Easier Frames: \nLesson #14</string>
	<string name="SimpleFifteenLesson">Easier Frames: \nLesson #15</string>
	<string name="ReverseOneLesson">Medium Frames: \nLesson #1</string>
    <string name="ReverseTwoLesson">Medium Frames: \nLesson #2</string>
    <string name="ReverseThreeLesson">Medium Frames: \nLesson #3</string>
	<string name="ReverseFourLesson">Medium Frames: \nLesson #4</string>
	<string name="ReverseFiveLesson">Medium Frames: \nLesson #5</string>
	<string name="ReverseSixLesson">Medium Frames: \nLesson #6</string>
	<string name="ReverseSevenLesson">Medium Frames: \nLesson #7</string>
    <string name="ReverseEightLesson">Medium Frames: \nLesson #8</string>
    <string name="ReverseNineLesson">Medium Frames: \nLesson #9</string>
	<string name="ReverseTenLesson">Medium Frames: \nLesson #10</string>
	<string name="ReverseElevenLesson">Medium Frames: \nLesson #11</string>
	<string name="ReverseTwelveLesson">Medium Frames: \nLesson #12</string>
	<string name="ReverseThirteenLesson">Medium Frames: \nLesson #13</string>
	<string name="ReverseFourteenLesson">Medium Frames: \nLesson #14</string>
	<string name="ReverseFifteenLesson">Medium Frames: \nLesson #15</string>
    <string name="DoubleReverseOneLesson">Harder Frames: \nLesson #1</string>
    <string name="DoubleReverseTwoLesson">Harder Frames: \nLesson #2</string>
    <string name="DoubleReverseThreeLesson">Harder Frames: \nLesson #3</string>
	<string name="DoubleReverseFourLesson">Harder Frames: \nLesson #4</string>
	<string name="DoubleReverseFiveLesson">Harder Frames: \nLesson #5</string>
	<string name="DoubleReverseSixLesson">Harder Frames: \nLesson #6</string>
	<string name="DoubleReverseSevenLesson">Harder Frames: \nLesson #7</string>
    <string name="DoubleReverseEightLesson">Harder Frames: \nLesson #8</string>
    <string name="DoubleReverseNineLesson">Harder Frames: \nLesson #9</string>
	<string name="DoubleReverseTenLesson">Harder Frames: \nLesson #10</string>
	<string name="DoubleReverseElevenLesson">Harder Frames: \nLesson #11</string>
	<string name="DoubleReverseTwelveLesson">Harder Frames: \nLesson #12</string>
	<string name="DoubleReverseThirteenLesson">Harder Frames: \nLesson #13</string>
	<string name="DoubleReverseFourteenLesson">Harder Frames: \nLesson #14</string>
	<string name="DoubleReverseFifteenLesson">Harder Frames: \nLesson #15</string>
	<string name="ProbeSessionOne">Check Up: \nSession #1</string>
    <string name="ProbeSessionTwo">Check Up: \nSession #2</string>
    <string name="ProbeSessionThree">Check Up: \nSession #3</string>
	<string name="ProbeSessionFour">Check Up: \nSession #4</string>
	<string name="ProbeSessionFive">Check Up: \nSession #5</string>
	<string name="ProbeSessionSix">Check Up: \nSession #6</string>
	<string name="ProbeSessionSeven">Check Up: \nSession #7</string>
    <string name="ProbeSessionEight">Check Up: \nSession #8</string>
    <string name="ProbeSessionNine">Check Up: \nSession #9</string>
	<string name="ProbeSessionTen">Check Up: \nSession #10</string>
	<string name="ProbeSessionEleven">Check Up: \nSession #11</string>
	<string name="ProbeSessionTwelve">Check Up: \nSession #12</string>
	<string name="ProbeSessionThirteen">Check Up: \nSession #13</string>
    <string name="ProbeSessionFourteen">Check Up: \nSession #14</string>
    <string name="ProbeSessionFifteen">Check Up: \nSession #15</string>
	<string name="correctAnswer">Absolutely Correct!!!</string>
    <string name="oops">"Oops! Let's try that again!"</string>
    <string name="perfectScore">"You've totally beaten this level!!!"</string>
    <string name="perfectScoreText">"You're both awesome!!! You're ready for the next level!!!"</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Daedalus</string>
    <string name="defaultFiller">SAMPLESAMPLESAMPLESAMPLESAMPLESAMPLESAMPLESAMPLESAMPLESAMPLESAMPLE</string>
    <string name="holderOne">holderONE</string>
    <string name="holderTwo">Said Something Else!</string>
    <string name="secondQuestion">Question #2</string>
    <string name="SimpleOneProbeOne">You are listening to me.  I am reading to you.</string>
	<string name="SimpleOneQuestionOne">What am I doing?</string>
	<string name="SimpleOneAnswerOne">Reading</string>
	<string name="SimpleOneErrorCorrectionOne">I am reading. You are listening.  I would be READING.</string>
	<string name="SimpleOneQuestionTwo">What are YOU doing?</string>
    <string name="SimpleOneAnswerTwo">Listening</string>
    <string name="SimpleOneErrorCorrectionTwo">I am reading. You are listening.  YOU would be LISTENING.</string>
	<string name="SimpleOneProbeTwo">You are sitting down.  I am talking to you.</string>
    <string name="SimpleOneQuestionThree">What am I doing?</string>
	<string name="SimpleOneAnswerThree">Talking</string>
	<string name="SimpleOneErrorCorrectionThree">You are sitting down.  I am talking to you. I would be TALKING.</string>
	<string name="SimpleOneQuestionFour">What are YOU doing?</string>
    <string name="SimpleOneAnswerFour">Sitting</string>
    <string name="SimpleOneErrorCorrectionFour">You are sitting down.  I am talking to you. YOU would be SITTING.</string>
    <string name="SimpleOneProbeThree">You are sitting on the chair.  I am in front of you.</string>
    <string name="SimpleOneQuestionFive">Where am I? </string>
    <string name="SimpleOneAnswerFive">In front of you</string>
	<string name="SimpleOneErrorCorrectionFive">You are sitting on the chair.  I am in front of you. I would be IN FRONT.</string>
	<string name="SimpleOneQuestionSix">Where are YOU?</string>
    <string name="SimpleOneAnswerSix">Sitting in the chair</string>
    <string name="SimpleOneErrorCorrectionSix">You are sitting on the chair.  I am in front of you. YOU would be SITTING IN THE CHAIR.</string>
    <string name="SimpleOneProbeFour">I am by the table. You are on the floor.</string>
    <string name="SimpleOneQuestionSeven">Where am I? </string>
    <string name="SimpleOneAnswerSeven">At the table</string>
	<string name="SimpleOneErrorCorrectionSeven">I am by the table. You are on the floor. I would be AT THE TABLE.</string>
	<string name="SimpleOneQuestionEight">Where are YOU?</string>
    <string name="SimpleOneAnswerEight">On the floor</string>
    <string name="SimpleOneErrorCorrectionEight">I am by the table. You are on the floor. YOU would be ON THE FLOOR.</string>
    <string name="SimpleOneProbeFive">You are listening now. You were learning before.</string>
    <string name="SimpleOneQuestionNine">What are you doing now? </string>
    <string name="SimpleOneAnswerNine">Listening</string>
	<string name="SimpleOneErrorCorrectionNine">You are listening now. You were learning before. You would be LISTENING RIGHT NOW.</string>
	<string name="SimpleOneQuestionTen">What were you doing before?</string>
    <string name="SimpleOneAnswerTen">Learning</string>
    <string name="SimpleOneErrorCorrectionTen">You are listening now. You were learning before. YOU were LEARNING BEFORE.</string>
    <string name="SimpleOneProbeSix">You were doing math problems before. You are learning something new right now.</string>
    <string name="SimpleOneQuestionEleven">What were you doing before? </string>
    <string name="SimpleOneAnswerEleven">Math problems</string>
	<string name="SimpleOneErrorCorrectionEleven">You were doing math problems before. You are learning something new right now. You were LEARNING MATH PROBLEMS.</string>
	<string name="SimpleOneQuestionTwelve">What are you doing now?</string>
    <string name="SimpleOneAnswerTwelve">Learning</string>
    <string name="SimpleOneErrorCorrectionTwelve">You were doing math problems before. You are learning something new right now. YOU would be LEARNING RIGHT NOW.</string>
    <string name="SimpleTwoProbeOne">You are waiting to play a game.  I am talking with you.</string>
    <string name="SimpleTwoQuestionOne">What am I doing?</string>
    <string name="SimpleTwoAnswerOne">Talking</string>
	<string name="SimpleTwoErrorCorrectionOne">You are waiting to play a game.  I am talking with you. I would be TALKING.</string>
	<string name="SimpleTwoQuestionTwo">What are YOU doing?</string>
    <string name="SimpleTwoAnswerTwo">Waiting</string>
    <string name="SimpleTwoErrorCorrectionTwo">You are waiting to play a game.  I am talking with you. YOU would be WAITING.</string>
    <string name="SimpleTwoProbeTwo">You are sitting down.  I am talking to you.</string>
    <string name="SimpleTwoQuestionThree">What am I doing?</string>
    <string name="SimpleTwoAnswerThree">Talking</string>
	<string name="SimpleTwoErrorCorrectionThree">You are sitting down.  I am talking to you. I would be TALKING.</string>
	<string name="SimpleTwoQuestionFour">What are YOU doing?</string>
    <string name="SimpleTwoAnswerFour">Sitting</string>
    <string name="SimpleTwoErrorCorrectionFour">You are sitting down.  I am talking to you. YOU would be SITTING.</string>
    <string name="SimpleTwoProbeThree">You are by the door.  I am by the windows.</string>
    <string name="SimpleTwoQuestionFive">Where am I? </string>
    <string name="SimpleTwoAnswerFive">By the windows</string>
	<string name="SimpleTwoErrorCorrectionFive">You are by the door.  I am by the windows. I would be BY THE WINDOWS.</string>
	<string name="SimpleTwoQuestionSix">Where are you?</string>
	<string name="SimpleTwoAnswerSix">By the door</string>
</resources>